fix: edit adaptive on mobile versions

--- a/blocks/about/about__box/about__box.css
+++ b/blocks/about/about__box/about__box.css
@@ -12,16 +12,7 @@
   }
 }
 
-@media (max-width: 768px) {
-  .about__box {
-    text-align: center;
-  }
-}
-
 @media (max-width: 376px) {
-  .about__box {
-    text-align: start;
-  }
   .about__box.slide {
     margin-bottom: 5px;
   }
