--- a/blocks/cards/cards__item/cards__item.css
+++ b/blocks/cards/cards__item/cards__item.css
@@ -20,6 +20,9 @@
     max-width: calc((100% - 4vw) / 3);
     padding: 0.5vw 0.5vw 1.5vw;
   }
+  .cards__item.cards-portfolio {
+    height: auto;
+  }  
 }
 
 @media (max-width: 768px) {
@@ -28,6 +31,7 @@
   }
   .cards__item.cards-portfolio {
     flex: 0 0 calc(100% - 40px);
+    max-width: 335px;
     height: auto;
     padding: 10px 10px 14px;
     box-sizing: content-box;
